# vortex

./: .env  .gitignore  Cargo.toml  LICENSE.md  PLAYWRIGHT_BUILD.md  README.md  TESTS_BUILD.md  TEST_SUITE_REPORT.md  TODO.md  certification-suite.txt  clippy.json  deps-audit.txt  package-lock.json  package.json  playwright.config.ts  unused.txt
.github/workflows/: ci.yml
assets/: index.html
dags/: airflow_compat_example.py  complex_100_job_dag.py  dynamic_mock.py  example_dag.py  parallel_benchmark.py  sla_test.py  stress_test.py  test_schedule.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  DEPLOYMENT.md  PHASE_2_PYTHON_INTEGRATION.md  PILLAR_3_SECRETS_VAULT.md  PILLAR_4_RESILIENCE.md  PLUGINS.md  high-availability.md
docs/grafana/: vortex-dashboard.json
dummy_plugin/: Cargo.toml
dummy_plugin/src/: lib.rs
logs/: vortex.log.2026-02-27  vortex.log.2026-02-28  vortex.log.2026-03-01
migrations/: 20260228000000_init.sql  20260228000002_phase4_wave2.sql  20260228100000_add_dynamic_flag.sql
plugins/: libdummy_plugin.dylib
proto/: swarm.proto
python/vortex/: __init__.py  airflow_shim.py  context.py  notifications.py  pools.py  task_group.py  xcom.py
python/vortex/operators/: __init__.py  bash.py  python.py  sensors.py
src/: dag_factory.rs  db.rs  db_postgres.rs  db_sqlite.rs  db_trait.rs  executor.rs  lib.rs  main.rs  metrics.rs  notifications.rs  pools.rs  proto.rs  python_parser.rs  scheduler.rs  sensors.rs  swarm.rs  vault.rs  web.rs  worker.rs  xcom.rs
tests/: common.rs  db_tests.rs  executor_tests.rs  integration_full.py  integration_tests.rs  parser_tests.rs  shim_tests.py  swarm_tests.rs  task_queue_tests.rs  vault_tests.rs  worker_tests.rs
tests/fixtures/: integration_test_dag.py  retry_test_dag.py
tests/ui/: 01-dashboard.spec.ts  02-dag-detail.spec.ts  03-secrets-management.spec.ts  04-rbac-users.spec.ts  05-swarm-panel.spec.ts  06-task-instances.spec.ts  07-forms-and-modals.spec.ts  08-api-integration.spec.ts  09-responsive-design.spec.ts  10-auth-and-rbac.spec.ts  README.md  helpers.ts
