[package]
name = "vortex"
version = "0.6.0"
edition = "2024"

[dependencies]
prometheus = { version = "0.13", features = ["process"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
pyo3 = { version = "0.23", features = ["auto-initialize"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
rust-embed = "8.5"
jsonwebtoken = "9.3"
mime_guess = "2.0"
cron = "0.12"
regex = "1.10"
chrono-tz = "0.10"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
hostname = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
tempfile = "3.8"
"async-recursion" = "1.1"
bcrypt = "0.17"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
libloading = "0.9.0"
cli-table = "0.5.0"
serde_yaml = "0.9.34"
lettre = { version = "0.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
hex = "0.4"

[build-dependencies]
tonic-build = "0.12"
